--- a/styles/style.css
+++ b/styles/style.css
@@ -3,20 +3,67 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* all primary things */
+.btn{
+    background: rgb(13, 19, 33);
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
+    padding: 18px 21px;
+    margin-top: 50px;
+}
+.btn2{
+    padding: 10px 17px;
+    border: 1px solid rgb(13, 19, 33);
+
+}
+
+/* all primary thing end here */
+
+
+
+
+
+
+/* simentic tag h1 h2 h3 p start here */
+h2{
+    color: rgb(13 , 19 , 33);
+    font-size: 30px;
+    font-weight: 800;
+}
+h3{
+    color: rgb(13 , 19 , 33);
+    font-size: 22px;
+    font-weight: 700;
+}
+
+
+/* simentic tag h1 h2 h3 p end here */
+
+
+
+
 /* hero section start here */
 #hero-section{
-    width: 100%;
-    height: 600px;
-    background-color: blueviolet;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 600px;
+    background-image: url(https://github.com/ProgrammingHero1/B10A1-Challenge-Begins/blob/main/assets/Hero-bg.png?raw=true);
+    background-repeat: no-repeat;
+    background-size:cover;
+    border: 2px solid black;
+    
+    
 }
 .hero-content{
+    width: 800px;
+    height: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+   
 
 }
 
@@ -27,14 +74,17 @@
     color: rgb(13 , 19 , 33);
 }
 .hero-content>p{ 
-    font-size: 14px;
+    text-align: center;
+    margin-top: 30px;
+
     
 }
-.btn{
-    background: rgb(13, 19, 33);
-    color: rgb(255, 255, 255);
-    border-radius: 8px;
-    padding: 18px 21px;
-    margin-bottom: 45px;
+/* header eng here */
 
+/* main section start here */
+#section2{
+    width: 1100px;
+    height: 1300px;
+    background: sandybrown;
+    margin: 50px 145px 50px 145px;
 }
