--- a/styles/style.css
+++ b/styles/style.css
@@ -25,15 +25,20 @@
 
 
 /* simentic tag h1 h2 h3 p start here */
+p{
+    margin-bottom: 25px;
+}
 h2{
     color: rgb(13 , 19 , 33);
     font-size: 30px;
     font-weight: 800;
+    margin-bottom: 25px;
 }
 h3{
     color: rgb(13 , 19 , 33);
     font-size: 22px;
     font-weight: 700;
+    margin-bottom: 25px;
 }
 
 
@@ -85,6 +90,26 @@ h3{
 #section2{
     width: 1100px;
     height: 1300px;
-    background: sandybrown;
-    margin: 50px 145px 50px 145px;
+    background:rgba(13, 19, 33, 0.02);
+    margin: 70px auto;
+    padding: 80px 100px 80px 100px;
+}
+.section2-content{
+    background-color: white;
+    width: 900px;
+    height: 1100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.section2-heading{
+    align-items: center;
+    text-align: center;
+}
+.content-div2{
+    display: flex;
+    align-items: center;
+    gap: 200px;
+    margin-top: 80px;
 }
