--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Azeret Mono", monospace;
 }
+
 /* all primary things */
 .btn{
     background: rgb(13, 19, 33);
@@ -73,7 +75,8 @@ h3{
 }
 
 .hero-heading{
-    font-size: 42px;
+    font-family: "Azeret Mono", monospace;
+    font-size: 32px;
     font-weight: 800;
     text-align: center;
     color: rgb(13 , 19 , 33);
@@ -101,6 +104,8 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 60px;
+    padding-right: 60px;
     
 }
 .section2-heading{
@@ -110,6 +115,38 @@ h3{
 .content-div2{
     display: flex;
     align-items: center;
-    gap: 200px;
+    gap: 100px;
     margin-top: 80px;
 }
+/* section 2 end */
+
+
+
+
+/* section 3 start here */
+#section3{
+    width: 1100px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background:rgba(13, 19, 33, 0.02);
+    margin: 70px auto;
+    padding: 80px 100px 80px 100px;
+}
+.section3-content{
+    background-color: white;
+    width: 900px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+.section-heading{
+  align-items: center;
+  text-align: center;
+}
+
+/* section 3 end here */
