--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,11 @@
 
 /* simentic tag h1 h2 h3 p start here */
 p{
+    font-size: 13px;
     margin-bottom: 25px;
+}
+h1{
+    margin-bottom: 20px;
 }
 h2{
     color: rgb(13 , 19 , 33);
@@ -42,7 +46,16 @@ h3{
     font-weight: 700;
     margin-bottom: 25px;
 }
+li{ 
+    list-style-type: none;
 
+}
+li a{
+    color: rgb(13 , 19 , 33);
+}
+img{
+    margin-bottom: 20px;
+}
 
 /* simentic tag h1 h2 h3 p end here */
 
@@ -59,7 +72,7 @@ h3{
     background-image: url(https://github.com/ProgrammingHero1/B10A1-Challenge-Begins/blob/main/assets/Hero-bg.png?raw=true);
     background-repeat: no-repeat;
     background-size:cover;
-    border: 2px solid black;
+   
     
     
 }
@@ -144,9 +157,123 @@ h3{
     padding-left: 60px;
     padding-right: 60px;
 }
+.videodiv{
+    border: 1px solid black;
+    padding: 15px;
+}
 .section-heading{
   align-items: center;
   text-align: center;
 }
 
 /* section 3 end here */
+
+
+
+
+
+/* section 4 start */
+#section4{
+    width: 1100px;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background:rgba(13, 19, 33, 0.02);
+    margin: 70px auto;
+    padding: 80px 100px 80px 100px;
+
+}
+
+.treediv{
+    background-color: white;
+    width: 900px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start ;
+    padding-left: 60px;
+    padding-right: 60px;
+    
+
+}
+
+    
+.html{
+    width: 350px;
+    height: 300px ;
+    border-radius: 16px;
+    background: rgba(255, 76, 30, 0.05);
+    margin-right: 25px;
+    padding:40px 10px;
+}
+.css{
+    width: 350px;
+    height: 300px ;
+    border-radius: 16px;
+    background: rgba(0, 76, 232, 0.05);
+    margin-right: 25px;
+    padding: 40px 10px;
+}
+.js{
+    width: 350px;
+    height: 300px ;
+    border-radius: 16px;
+    background: rgba(255, 223, 0, 0.05);
+    margin-right: 25px;
+    padding: 40px 10px;
+}
+
+
+/* section 4 end */
+
+
+
+
+/* footer start */
+
+#footer-div{
+    width: 1100px;
+    height: 300px;
+    background-image:url("handshake.jpg");
+    border: 1px solid rgb(74, 49, 49);
+    border-radius: 16px;
+    margin: 70px auto; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.footer-heading{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    
+}
+input{
+    width: 400px;
+    height:40px;
+    padding: 8px;
+    opacity: o.7;
+
+}
+.btn3{
+    width: 120px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 600;
+}
+.last-div{
+    background: rgba(13, 19, 33, 0.03);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding: 30px;
+}
+
+    
+
+
