--- a/styles/style.css
+++ b/styles/style.css
@@ -235,7 +235,9 @@ img{
 #footer-div{
     width: 1100px;
     height: 300px;
-    background-image:url("handshake.jpg");
+    background-image:url("https://raw.githubusercontent.com/ProgrammingHero1/B10A1-Challenge-Begins/main/assets/handshake.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     border: 1px solid rgb(74, 49, 49);
     border-radius: 16px;
     margin: 70px auto; 
